# tap-klaviyo

./: README.md  pyproject.toml
tap_klaviyo/schemas/: dropped_email.json  open.json
