[tool.poetry]
name = "tap-klaviyo"
version = "0.1.2"
description = "Singer.io tap for extracting data from Klaviyo"
authors = ["Simon Data"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.7"
singer-python = "5.13.0"
#singer-python = "3.3.1"
#singer-python = "3.2.3"
#singer-python = "3.2.1"
#requests = "2.29.0"
requests = "2.18.4"
ipdb = "0.13.13"
backoff = "1.8.0"
#tap-kit = { version = "0.1.2", source="artifactory" }

[[tool.poetry.source]]
name = "artifactory"
url = "https://simondata.jfrog.io/artifactory/api/pypi/pypi/simple"
secondary = true

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tap-klaviyo = "tap_klaviyo:main"

[tool.poetry.plugins]

[tool.poetry.plugins."tap-klaviyo"]
"tap-klaviyo" = "tap_klaviyo:main"
